--- a/IGI/IGILR5/EstateAgency/agency/templates/agency/owner/admin_info.html
+++ b/IGI/IGILR5/EstateAgency/agency/templates/agency/owner/admin_info.html
@@ -1,6 +1,7 @@
 {% extends 'agency/base.html' %}
 {%load static %}
 {% load agency_tags %}
+
 {% block title %}Admin Info{% endblock %}
 {% block content %}
 <div style="display: flex; flex-wrap: wrap; width: 90%; margin: 50px auto;" class="row">
@@ -54,4 +55,10 @@
 				<h4 style="display: inline-block; float: right"><strong>Most beneficial category: {{most_beneficial_category}}</strong></h4>
 
 		</div>
+
+
+
+<img src="{{graphic1}}" alt="">
+<img src="{{graphic2}}" alt="">
+
 {% endblock %}
