--- a/IGI/IGILR5/EstateAgency/agency/templates/agency/owner_realty.html
+++ b/IGI/IGILR5/EstateAgency/agency/templates/agency/owner_realty.html
@@ -47,7 +47,7 @@
 		{%endfor%}
 		{% endif %}
 		{%if not is_emp %}
-			{%if buying_realtys%}
+			{%if buying_realties %}
 				<h3 style="display: inline-block; float: right"><strong>You realties, which you buy</strong></h3>
 				<hr>
 				{%for realty in buying_realties%}
