--- a/IGI/IGILR5/EstateAgency/agency/templates/agency/profile_user.html
+++ b/IGI/IGILR5/EstateAgency/agency/templates/agency/profile_user.html
@@ -139,7 +139,7 @@
 </div>
 
 <div style="display: flex; flex-wrap: wrap; width: 90%; margin: 50px auto;" class="row">
-		<h3 style="display: inline-block; float: right"><strong>His Realtys: </strong></h3>
+		<h3 style="display: inline-block; float: right"><strong>His Realties: </strong></h3>
 		<hr>
 		{%for realty in realtys%}
 		<div style="width: 274px; height: 300px; flex-basis: 25%; max-width: 274px; margin-bottom: 112px;" class="col-lg-4">
