--- a/IGI/IGILR5/EstateAgency/agency/templates/agency/buy_realty.html
+++ b/IGI/IGILR5/EstateAgency/agency/templates/agency/buy_realty.html
@@ -1,6 +1,6 @@
 {% extends 'agency/base.html' %}
 {% load static %}
-
+{% load agency_tags %}
 {% block title %}Realty{% endblock %}
 
 {% block content %}
@@ -134,13 +134,22 @@
 				<h6><strong>{{realty.name}}</strong></h6>
 				<h6><strong>{{realty.address.city}}</strong></h6>
 				<hr>
-                <h4 style="display: inline-block; float: right"><strong>${{realty.price}}</strong></h4>
+                {%if discount%}
+                {%get_price_discount realty.price discount as price_discount%}
+				<div style="color: red" class="product-price"><small style="color: black">${{realty.price}}</small>${{price_discount}}</div>
+				{%else%}
+				<div style="color: black" class="product-price">${{realty.price}}</div>
+				{%endif%}
             </div>
     </div>
+     <label style="white-space:nowrap">Enter promocode</label>
+        <input class="form-control search-input me-2" type="text"  placeholder="Promocode" aria-label="Search" id ="promocode" >
+        <button id="btn_promocode" class="btn btn-dark">GET</button>
      <form action="{% url 'create-checkout-session' realty.slug landlord.id %}" method="POST">
          {% csrf_token %}
          <button type="submit" class="btn btn-outline-success" id="checkout-button">Checkout</button>
      </form>
+
     <style>
 @media (min-width: 0){
     .g-pa-30 {
@@ -161,6 +170,42 @@
 
 
 <script>
+const discount =localStorage.getItem('Discpount');
+if (discount){
+console.log(discount);
+}
+else{
+console.log("No discount");
+}
+const BtnPromocode= document.getElementById('btn_promocode');
+
+
+const savedPromocode = localStorage.getItem('Promocode');
+
+if (savedPromocode) {
+    document.getElementById('promocode').value = savedPromocode;
+}
+
+
+
+
+BtnPromocode.addEventListener('click', function() {
+    const Promocode = document.getElementById('promocode').value;
+    localStorage.setItem('Promocode', Promocode);
+    console.log(Promocode);
+    var url = new URL(window.location.href);
+    var params = url.searchParams;
+     if (params.has('promocode')) {
+        // Update the existing parameter value
+        params.set('promocode', Promocode);
+    } else {
+        // Add the new parameter to the URL
+        params.append('promocode', Promocode);
+    }
+    window.location.href = url;
+
+});
+
 const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
 
 // Create an instance of the Stripe object with your publishable API key
