--- a/IGI/IGILR5/EstateAgency/agency/templates/agency/realty.html
+++ b/IGI/IGILR5/EstateAgency/agency/templates/agency/realty.html
@@ -184,6 +184,36 @@
 
 		</div>
 	</div>
+		<h3 style="text-align: center;">Comments:</h3>
+    {% for comment in comments %}
+    <div class="col-md-8" style="box-shadow:hsl(0, 0%, 80%) 0 0 16px; border-radius: 4px; margin: 30px auto;">
+        <div class="media g-mb-30 media-comment">
+            <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+              <div class="g-mb-15">
+                <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ comment.user }}</h5>
+                <span class="g-color-gray-dark-v4 g-font-size-12">{{ comment.created_at }}</span>
+              </div>
+              <p style="margin-bottom: 0;"><br>Rating: {{ comment.rating }}<br>{{ comment.text }}</p>
+            </div>
+        </div>
+    </div>
+    {% empty %}
+        <p style="text-align: center; margin-top: 16px; font-size: 20px;">No comments yet...</p>
+    {% endfor %}
+
+    <h3 style="text-align: center; margin-top: 50px;">Add Comment:</h3>
+    <div class="col-md-3" style="box-shadow:hsl(0, 0%, 80%) 0 0 16px; border-radius: 4px; margin: 30px auto;">
+        <div class="media g-mb-30 media-comment">
+            <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+                <form method="post" action="{% url 'realty' realty_slug=realty.slug %}">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button class="btn btn-success add-btn" type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
 
     <style>
 @media (min-width: 0){
